--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="user-form">
             <div class="from-input-field">
-                <form action="./log In/index.html" class="form-field input-field">
+                <form action="../log In/index.html" class="form-field input-field">
                     <h2 style="text-align: center;">Sign Up</h2>
                     <label class="label-input" for="firstname">Enter your first name:</label>
                     <input type="text"  class="email-input" id="firstname" placeholder="Enter your first name:">
