update new thing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <input type="email" placeholder="E-mail" id="email" class="email-input" required>
                     <br>
                     <label class="label-input" for="pass">Enter you are strong password:</label><br>
-                    <input type="password" placeholder=Password" id="pass" class="email-input" required maxlength="8">
+                    <input type="password" placeholder="Password" id="pass" class="email-input" required maxlength="8">
                     <br>
                     <div class="log-in-field">
                         <div>
@@ -44,7 +44,8 @@
                     </div>
                    <div class="account-create">
                      <p>Don't have account?</p>
-                    <a href="./sign-up/index.html">Create account?</a></div>
+                    <a href="./sign-up/index.html">Create account?</a>
+                </div>
                 </form>
             </div>
         </div>
