--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -20,17 +20,19 @@
             <div class="from-input-field">
                 <form action="../log In/index.html" class="form-field input-field">
                     <h2 style="text-align: center;">Sign Up</h2>
-                    <label class="label-input" for="firstname">Enter your first name:</label>
-                    <input type="text"  class="email-input" id="firstname" placeholder="Enter your first name:">
-                    <br>
-                    <label class="label-input" for="lastname">Enter your last name:</label>
-                    <input type="text"  class="email-input" id="lastname" placeholder="Enter your last name:">
-                    <br>
+                    <div>
+                        <label class="label-input" for="firstname">First name:</label>
+                        <label id="last-name" class="label-input" for="lastname">Last name:</label>
+                    </div>
+                    <div class="name-input">
+                        <input type="text" class="email-input" id="firstname" placeholder="Enter your first name:">
+                        <input type="text" class="email-input" id="lastname" placeholder="Enter your last name:">
+                    </div> 
                     <label class="label-input" for="email">Enter you are email:</label><br>
-                    <input type="email" placeholder="E-mail" id="email" class="email-input" required>
+                    <input type="email" placeholder="E-mail ID" id="email" class="email-input" required>
                     <br>
                     <label class="label-input" for="pass">Set strong password:</label><br>
-                    <input type="password" placeholder=Password" id="pass" class="email-input" required maxlength="8">
+                    <input type="password" placeholder="Password" id="pass" class="email-input" required maxlength="8">
                     <br>
                     <div class="others-info">
                         <input type="date" class="date-birth" required>
@@ -48,7 +50,7 @@
                             <input type="submit" id="submit" value="Log in" required>
                         </div>
                     </div>
-                    
+
                 </form>
             </div>
         </div>
